--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^4.6.0",
     "connect-pg-simple": "^10.0.0",
+    "dotenv": "^17.0.1",
     "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.8.2",
     "express": "^5.1.0",
