--- a/package.json
+++ b/package.json
@@ -1,54 +1,26 @@
 {
   "name": "budgetiq",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "type": "module",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx server/index.ts",
-    "build": "tsc && vite build",
-    "db:push": "drizzle-kit push",
-    "db:generate": "drizzle-kit generate"
+    "dev": "NODE_ENV=development tsx server/index.ts",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "start": "NODE_ENV=production node dist/index.js",
+    "check": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.2.0",
-    "@mui/material": "^7.2.0",
-    "@mui/x-charts": "^8.6.0",
-    "@neondatabase/serverless": "^1.0.1",
-    "@tanstack/react-query": "^5.81.5",
-    "@types/express": "^5.0.3",
-    "@types/express-session": "^1.18.2",
-    "@types/node": "^24.0.10",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/ws": "^8.18.1",
-    "@vitejs/plugin-react": "^4.6.0",
-    "connect-pg-simple": "^10.0.0",
-    "dotenv": "^17.0.1",
-    "drizzle-orm": "^0.44.2",
-    "drizzle-zod": "^0.8.2",
-    "express": "^5.1.0",
-    "express-session": "^1.18.1",
-    "nanoid": "^5.1.5",
-    "pg": "^8.16.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "recharts": "^3.0.2",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.0",
-    "wouter": "^3.7.1",
-    "ws": "^8.18.3",
-    "zod": "^3.25.74"
+    "express": "^4.21.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "vite": "^6.0.1",
+    "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1"
   },
   "devDependencies": {
-    "@types/pg": "^8.15.4",
-    "drizzle-kit": "^0.31.4",
-    "esbuild": "^0.25.5"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1",
+    "esbuild": "^0.24.0",
+    "drizzle-kit": "^0.26.2"
   }
 }
