--- a/package.json
+++ b/package.json
@@ -17,14 +17,21 @@
     "drizzle-zod": "^0.5.1",
     "pg": "^8.12.0",
     "zod": "^3.23.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "wouter": "^3.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vite": "^6.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/express-session": "^2.0.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.2",
     "@types/node": "^22.10.1",
-    "esbuild": "^0.24.0",
-    "drizzle-kit": "^0.26.2"
+    "@types/pg": "^8.11.10",
+    "@vitejs/plugin-react": "^4.3.4",
+    "esbuild": "^0.24.0"
   }
 }
