--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "paths": {
       "@shared/*": ["./shared/*"],
       "@/*": ["./client/src/*"]
-    }
+    },
+    "jsx": "react-jsx"
   }
 }
