--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "wouter": "^3.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "tailwindcss": "^3.4.16",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
