--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@tanstack/react-query": "^5.83.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.8.2",
     "express": "^4.21.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -24,7 +28,8 @@
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vite": "^6.0.1",
-    "wouter": "^3.7.1"
+    "wouter": "^3.7.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
